fix: add swagger examples and correct end_date filter
